--- a/mypy.ini
+++ b/mypy.ini
@@ -132,8 +132,8 @@ ignore_errors = True
 [mypy-torch.distributions.*]
 ignore_errors = True
 
-[mypy-torch.tensor]
-ignore_errors = True
+#[mypy-torch.tensor]
+#ignore_errors = True
 
 [mypy-torch._tensor_str]
 ignore_errors = True
